--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,9 @@
 
     <main>
         This will be the main page for my web app. It will give a basic run down of what my web app does.
-        Click on one of the links at the side to view current information. Or click the link above to add a new league.
+        Click on one of the links at the side to view current information.
+
+        
     </main>    
     
 
