--- a/templates/leagues/index.html
+++ b/templates/leagues/index.html
@@ -3,16 +3,20 @@
 {% block content %}
 
     <main>
-        This page will show all current leagues(hyperlinked)
+        <!-- This page will show all current leagues(hyperlinked) -->
         <table>
             <tr>
                 <th>League Name</th>
+                <th></th>
                 <th>Sport</th>
             </tr>
+            {% for league in leagues %}
             <tr>
-                <td><a href="/leagues/league.id">Division 1 19/20</a></td>
-                <td>Canoe Polo</td>
-            </tr>
+                <td><a href="leagues/{{ league.id }}"> {{ league.name }} </a></td>
+                <td>|</td>
+                <td>{{ league.sport }}</td>
+            </tr>    
+            {% endfor %}
         </table>
         
     </main>    
