Pretty much sorted the viewing of leagues/fixtures/table

--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,7 @@
                     <a href="/"><button>Homepage</button></a>
                 </ls>
                 <ls>
-                    <a href="/create_league"><button>Create A New League</button></a>
+                    <a href="/edit"><button>Edit_Leagues</button></a>
                 </ls>
             </nav>
         </header>
