--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
         This will be the main page for my web app. It will give a basic run down of what my web app does.
         Click on one of the links at the side to view current information.
 
-        
+        Alternatively Use the link above to edit a league/add a new one.
     </main>    
     
 
