Pretty much finished viewing side of web app. couple more bits as possible add ons

--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,7 @@
                     <a href="/"><button>Homepage</button></a>
                 </ls>
                 <ls>
-                    <a href="/edit"><button>Edit_Leagues</button></a>
+                    <a href="/edit"><button>Edit Leagues</button></a>
                 </ls>
             </nav>
         </header>
