--- a/templates/leagues/results.html
+++ b/templates/leagues/results.html
@@ -11,22 +11,27 @@
                 <th></th>
                 <th></th>
                 <th>Team 2</th>
+                <th>Round Number</th>
             </tr>
             {% for game in games %}
             <tr>
-                <th>{{ game.game_no }}</th>
+                <th><a href="/games/{{ game.id }}">{{ game.game_no }}</a></th>
                 <th><a href="/teams/{{ game.team_1.id }}">{{ game.team_1.name }}</a></th>
                 <th>{{ game.team_1_score }}</th>
                 <th>vs</th>
                 <th>{{ game.team_2_score }}</th>
                 <th><a href="/teams/{{ game.team_1.id }}">{{ game.team_2.name }}</a></th>
+                <th><a href="/leagues/{{league.id}}/round/{{game.round_no}}">{{game.round_no}}</a></th> 
             </tr>
             {% endfor %}
         </table>
         {% if games == [] %}
             There are no results yet!
         {% endif %}
-
+        <div>
+            <a href="/leagues/{{league.id}}/fixtures"><button>Fixtures</button></a>
+            <a href="/leagues/{{league.id}}/current_round"><button>Current Round</button></a>
+        </div>
         <h2><a href="/leagues/{{ league.id }}">Back To league Table</a></h2>
     </main>
 {% endblock %}
