--- a/templates/index.html
+++ b/templates/index.html
@@ -3,10 +3,9 @@
 {% block content %}
 
     <main>
-        This will be the main page for my web app. It will give a basic run down of what my web app does.
-        Click on one of the links at the side to view current information.
-
-        Alternatively Use the link above to edit a league/add a new one.
+        <h1>Welcome</h1>
+        <p>Hi there and welcome to my league organiser. On the right hand side of this page you'll find a handy navigation bar to get around all existing Leagues/Teams/Players.</p>
+        <p>Once you're comfortable with what's already there, feel free to click the big 'Edit Leagues' button in the top right hand corner of your screen to update as you please.</p>
     </main>    
     
 
