--- a/templates/base.html
+++ b/templates/base.html
@@ -36,7 +36,7 @@
                             <a href="/edit/players"><button>Add Players</button></a>
                         </li>
                         <li>
-                            <a href="/edit/games"><button>Update Games</button></a>
+                            <a href="/edit/games/pick-league"><button>Update Games</button></a>
                         </li>
                     {% else %}
                         <li>
