--- a/templates/edit_index.html
+++ b/templates/edit_index.html
@@ -4,6 +4,6 @@
     <main>
         <h1>So you've decided to lend a hand :-)</h1>
         <p>As you can see from the side bar, we can now do more than just view what we have. We can also add players to teams, and remove teams altogether. Be careful though as removing a team is irreversible</p>
-        <p>And if you have any leagues of your own you wish to add then feel free with the 'Create League' option below. But make sure you know how many teams your league has as you cant add these once it has started.</p>
+        <p>And if you have any leagues of your own you wish to add then feel free with the 'Create League' option as well. But make sure you know how many teams your league has as you cant add these once it has started. Although you can change their names.</p>
     </main>
 {% endblock %}
