--- a/templates/teams/edit.html
+++ b/templates/teams/edit.html
@@ -2,15 +2,19 @@
 
 {% block content %}
     <main>
-        <h3>Pick the team you want to remove. Make sure your certain though as theres no coming back.</h3>
-        <form action="/edit/teams" method="post">
+        <h3>Pick the team you want to change, then enter the new name of the team.</h3>
+        <form action="/edit/teams/name" method="post">
+            <p>
             <select name="team_id" id="team">
                 <option value="">Select A Team</option>
                 {% for team in teams %}
                 <option value="{{team.id}}">{{team.name}}</option>
                 {% endfor %}
             </select>
-            <button type="submit">Delete Team</button>
+            </p>
+            <label for="new_name">New Name:</label>
+            <input type="text" name="new_name" id="new_name">
+            <button type="submit">Change Name</button>
         </form>
     </main>
-{% endblock  %}
+{% endblock content %}
