Small change to buttons below league table

--- a/templates/leagues/show.html
+++ b/templates/leagues/show.html
@@ -35,7 +35,7 @@
             {% endfor %}
         </table>
 
-        <div>
+        <div class="fixture_buttons">
             <a href="/leagues/{{league.id}}/fixtures"><button>Fixtures</button></a>
             <a href="/leagues/{{league.id}}/current_round"><button>Current Round</button></a>
             <a href="/leagues/{{league.id}}/results"><button>Results</button></a>
