--- a/templates/new_leagues/add_players.html
+++ b/templates/new_leagues/add_players.html
@@ -20,5 +20,8 @@
             <input type="text" name="position" id="position">
             <button type="submit">Add Player</button>
         </form>
+        <div class="table_button">
+            <a href="/leagues/{{league.id}}"><button>Go To League Table</button></a>
+        </div>
     </main>
 {% endblock %}
